--- a/frame.html
+++ b/frame.html
@@ -46,10 +46,10 @@ ul, #myUL {
 
 
 <ul id="myUL">
-  <li><span class="caret"><a href="file:///home/neha/Desktop/Tree/mam.html " target="b"><img src="madhumam.jpg" height="62" width="62"></a></span>
+  <li><span class="caret"><a href="mam.html " target="b"><img src="madhumam.jpg" height="62" width="62"></a></span>
     <ul class="nested">
-      <li class=""><a href="file:///home/neha/Desktop/Tree/mam1.html " target="b"><img src="archana_mam.jpg" height="62" width="62"></a></li>
-      <li class=" "><a href="file:///home/neha/Desktop/Tree/sir.html"target="b"><img src="sc_sir.jpg" height="62" width="62"></a></li>
+      <li class=""><a href="mam1.html " target="b"><img src="archana_mam.jpg" height="62" width="62"></a></li>
+      <li class=" "><a href="sir.html"target="b"><img src="sc_sir.jpg" height="62" width="62"></a></li>
       
       
       <li><span class="caret"><a href="#" target="b"><img src="a.jpg" height="62" width="62"></a></span>
