--- a/frame1.html
+++ b/frame1.html
@@ -16,7 +16,7 @@ body
 <body ><!--style="margin:50; padding:50" --> 
 	<!-- <center><h1>Campus Leadership</h1></center> -->
 	
-<p> <a href="file:///home/neha/Desktop/Tree/about.html " target="a"><img src="ashok_sir.jpg" alt="Dr Ashok K Chitkara" style=" margin-right:50px"></a>
+<p> <a href="about.html " target="a"><img src="ashok_sir.jpg" alt="Dr Ashok K Chitkara" style=" margin-right:50px"></a>
 	<h1>DR ASHOK K CHITKARA</h1>
 	<h3>CHANCELLOR,CHITKARA UNIVERSITY -PUNJAB</h3>
 	With exemplary elegance and polished ideas, with towering calibre and right balance of thoughts and beliefs,<br>
